---------------------------------------------------------------------------------------------------
Version: 1.3.3
Date: ????
  Changes:
    - Deep Storage Unit (DSU) recipes are now hidden from the Recipe Book
  Bugfixes:
    - Fixed a crash when two players were searching at the same time
---------------------------------------------------------------------------------------------------
Version: 1.3.2
Date: 2020-05-26
  Bugfixes:
    - Fixed that object availability would not be updated when migrating
---------------------------------------------------------------------------------------------------
Version: 1.3.1
Date: 2020-05-26
  Bugfixes:
    - Fixed a crash when joining a multiplayer game for not the first time
---------------------------------------------------------------------------------------------------
Version: 1.3.0
Date: 2020-05-26
  Features:
    - Added keyboard shortcuts for changing categories in the search GUI
    - The shortcut button properly toggles the search GUI open/closed, instead of just opening it
    - Hidden objects are now indicated with an [H] moniker
    - Unavailable (unresearched) objects are colored red
    - Added an option to hide unavailable objects
  Changes:
    - Refactored mod structure to improve performance and simplicity
    - Switched from RaiLuaLib to FLib
    - Search is now spread out over multiple ticks to save performance and allow the addition of more complex features
    - Changing search categories will no longer reset the textfield to blank
    - Removed crafters as a searchable category and info screen, the utility offered by them was minimal
    - Transport drones recipes are now excluded from the Recipe Book
    - Recipes that have no ingredients are excluded from the Recipe Book
    - Updated GUI styles for Factorio 0.18.27
---------------------------------------------------------------------------------------------------
Version: 1.2.3
Date: 2020-04-12
  Changes: